# hands-on-llms

./: .gitignore  README.md
modules/financial_bot/: Makefile
modules/financial_bot/financial_bot/: constants.py  handlers.py  langchain_bot.py  models.py  utils.py
modules/financial_bot/tools/: bot.py
modules/streaming_pipeline/: .dockerignore  Makefile  pyproject.toml
modules/streaming_pipeline/deploy/: Dockerfile  create_user_data.sh  launch_ec2.sh  ssh_ec2.sh  terminate_ec2.sh  user_data_template.sh
modules/streaming_pipeline/streaming_pipeline/: alpaca_batch.py  alpaca_stream.py  qdrant.py
modules/training_pipeline/: .beamignore  Makefile  README.md
modules/training_pipeline/configs/: dev_inference_config.yaml  inference_config.yaml
modules/training_pipeline/tools/: inference_run.py  train_run.py
modules/training_pipeline/training_pipeline/: __init__.py  metrics.py
